@@ -152,6 +152,7 @@ export LDAP_SERVICE_IMAP='imap'
 export LDAP_SERVICE_IMAPS='imapsecured'
 export LDAP_SERVICE_DELIVER='deliver'
 export LDAP_SERVICE_LDA='lda'
+export LDAP_SERVICE_LMTP='lmtp'
 export LDAP_SERVICE_FORWARD='forward'
 export LDAP_SERVICE_SENDER_BCC='senderbcc'
 export LDAP_SERVICE_RECIPIENT_BCC='recipientbcc'
