@@ -92,6 +92,7 @@ ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_IMAP}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_IMAPS}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_DELIVER}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_LDA}
+${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_LMTP}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_FORWARD}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_SENDER_BCC}
 ${LDAP_ENABLED_SERVICE}: ${LDAP_SERVICE_RECIPIENT_BCC}
